<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#EFEFEF"
        android:gravity="end|center_vertical|bottom"
        android:maxLength="12"
        android:padding="10dp"
        android:textSize="50sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <!-- Row 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aterisk"
                android:textSize="30sp" />
        </TableRow>

        <!-- Row 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnDivide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/back_slash"
                android:textSize="30sp" />
        </TableRow>

        <!-- Row 3 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:textSize="30sp" />
        </TableRow>

        <!-- Row 4 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnDecimal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clr"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSubtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:textSize="30sp" />
        </TableRow>

        <!-- Row 5 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="4"
                android:text="@string/equal"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>